implement layers, meals filtering, user selecting, fix errors

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,7 +8,16 @@
 <hr>
 <ul style="font-size: large">
     <li><a href="users">Users</a></li>
-    <li><a href="meals">Meals</a></li>
+    <li>
+        <form method="post" action="users">
+            Meals for
+            <select name="userId">
+                <option value="1">User#1</option>
+                <option value="2">Administrator</option>
+            </select>
+            <button type="submit" name="action" value="selectUser">Выбрать</button>
+        </form>
+    </li>
 </ul>
 </body>
 </html>
